[package]
name = "launch-pad"
description = "Asynchronous process manager library"
version = "0.1.0"
edition = "2024"
authors = ["Lucy <lucy@system76.com>"]
repository = "https://github.com/pop-os/launch-pad"
license = "MPL-2.0"

[dependencies]
log = "0.4"
slotmap = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "sync", "rt", "macros", "io-util", "time"] }
tokio-util = "0.7"
rand = "0.9"
nix = { version = "0.30", features = ["signal", "fs"] }
sync_wrapper = "1.0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [".", "tests/ordering", "tests/stdout-stderr"]
default-members = ["."]
