[package]
name = "launch-pad"
description = "Async process manager/supervisor for *nix systems"
version = "1.0.0"
edition = "2024"
authors = ["System76 <info@system76.com>"]
repository = "https://github.com/pop-os/launch-pad"
license = "MPL-2.0"

[dependencies]
log = "0.4"
slotmap = "1"
thiserror = "2"
tokio = { version = "1.0", features = ["process", "sync", "rt", "macros", "io-util", "time"] }
tokio-util = "0.7"
rand = "0.9"
sync_wrapper = "1.0"
# Used by fcntl
rustix = { version= "1.0", features = ["fs"] }

# Use io_uring for killing processes on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version= "1.0", features = ["fs", "process", "io_uring"] }

# Use libc for killing processes on other platforms.
[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [".", "tests/ordering", "tests/stdout-stderr"]
default-members = ["."]
